Improved the callbacks to only re-get the value if there is a callback. Also, added the AccessContext used in the registration to the re-get request.